# adoc-md-converter

./: README.md  pyproject.toml
data/: about.md  include_recursion.adoc  long.adoc  short.adoc  very_short.adoc
data/dir_include/: very_short2.adoc
src/adoc_md_converter/: adoc_md_converter.py  asciidoc.py  converter.py  markdown.py
tests/: test_add_one.py
