[project]
name = "adoc_md_converter"
version = "0.0.1.dev"
authors = [
  { name="Jiri Hanus", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/Hanyman8/adoc-md-converter"